--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/trading?createDatabaseIfNotExist=true
-    username: root
-    password: anjusoni
+    url: ${DATABASE_URL:jdbc:mysql://localhost:3306/trading?createDatabaseIfNotExist=true}
+    username: ${DATABASE_USERNAME:root}
+    password: ${DATABASE_PASSWORD:anjusoni}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     generate-ddl: true
@@ -31,7 +31,7 @@ spring:
             required: true
 
 server:
-  port: 9080
+  port: {PORT:9080}
 
 razorpay:
   api:
